[package]
name = "autofill"
edition = "2021"
version = "0.1.0"
authors = ["Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
error-support = { path = "../support/error" }
interrupt-support = { path = "../support/interrupt" }
jwcrypto = { path = "../support/jwcrypto" }
lazy_static = "1.4"
rusqlite = { version = "0.37.0", features = ["functions", "bundled", "serde_json", "unlock_notify"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
sql-support = { path = "../support/sql" }
sync-guid = { path = "../support/guid", features = ["rusqlite_support", "random", "serde_support"] }
sync15 = { path = "../sync15", features = ["sync-engine"] }
thiserror = "2"
types = { path = "../support/types" }
uniffi = { version = "0.29.0" }
url = { version = "2.2", features = ["serde"] }

[dev-dependencies]
libsqlite3-sys = { version = "0.35.0" }
nss = { path = "../support/rc_crypto/nss" }
error-support = { path = "../support/error", features=["testing"] }

[build-dependencies]
uniffi = { version = "0.29.0", features=["build"]}
