[package]
name = "context_id"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[build-dependencies]
uniffi = { version = "0.31", features=["build"]}

[dependencies]
chrono = "0.4"
error-support = { path = "../support/error" }
lazy_static = { version = "1.4" }
parking_lot = "0.12"
serde = "1"
serde_json = "1"
thiserror = "2"
uniffi = { version = "0.31" }
url = "2"
uuid = { version = "1.3", features = ["v4"]}
viaduct = { path = "../viaduct" }

[dev-dependencies]
mockito = { version = "0.31", default-features = false}
viaduct-dev = { path = "../support/viaduct-dev" }
