[package]
name = "crashtest"
edition = "2021"
version = "0.1.0"
authors = ["Ryan Kelly <rfkelly@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[dependencies]
log = "0.4"
thiserror = "2"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "33469c071119ac884a93682b132e8f661a080542" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "33469c071119ac884a93682b132e8f661a080542", features=["build"]}
