[package]
name = "crashtest"
edition = "2021"
version = "0.1.0"
authors = ["Ryan Kelly <rfkelly@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[dependencies]
log = "0.4"
thiserror = "2"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "7d647a85a1258d4795e551048eb900193083365c" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "7d647a85a1258d4795e551048eb900193083365c", features=["build"]}
