[package]
name = "crashtest"
edition = "2021"
version = "0.1.0"
authors = ["Ryan Kelly <rfkelly@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[dependencies]
log = "0.4"
thiserror = "2"
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "874202a89f5d4437eb974ef4766564162caf01f8" }

[build-dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "874202a89f5d4437eb974ef4766564162caf01f8", features=["build"]}
