[package]
name = "fairy-bridge"
version = "0.1.0"
edition = "2021"

[features]
default = []
backend-hyper = ["dep:hyper", "dep:hyper-tls"]
backend-c = ["dep:oneshot"]

[dependencies]
async-trait = "0.1"
error-support = { path = "../support/error" }
oneshot = { version = "0.1", optional = true }
pollster = "0.3.0"
serde = "1"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
uniffi = { version = "0.29.0" }
url = "2.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"], optional = true }
hyper-tls = { version = "0.5", features = ["vendored"], optional = true }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }
