[package]
name = "filter_adult"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5", default-features = false, features = ["std", "derive"], optional = true }
error-support = { path = "../support/error" }
md-5 = "0.10"
regex = "1"
thiserror = "2"
uniffi = { git = "https://github.com/mozilla/uniffi-rs.git", rev = "106e12ae2a0474a1880667ed3a4b050fcf1c6666" }

[[bin]]
name = "import-site-list"
required-features = ["build-binary"]

[features]
build-binary = ["clap"]
