[package]
name = "fxa-client"
edition = "2021"
version = "0.1.0"
authors = ["Edouard Oger <eoger@fastmail.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[dependencies]
base64 = "0.21"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
parking_lot = ">=0.11,<=0.12"
rate-limiter = { path = "../support/rate-limiter" }
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
sync15 = { path = "../sync15", default-features=false, features=["crypto"] }
url = "2.2"
viaduct = { path = "../viaduct" }
jwcrypto = { path = "../support/jwcrypto" }
rc_crypto = { path = "../support/rc_crypto", features = ["ece", "hawk"] }
error-support = { path = "../support/error" }
thiserror = "1.0"
anyhow = "1.0"
sync-guid = { path = "../support/guid", features = ["random"] }
uniffi = { workspace = true }
payload-support = { path = "../support/payload" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[dev-dependencies]
viaduct-reqwest = { path = "../support/viaduct-reqwest" }
mockall = "0.11"
mockito = "0.31"

[features]
default = []
gecko = [ "rc_crypto/gecko" ]
