[package]
name = "fxa-client"
edition = "2021"
version = "0.1.0"
authors = ["Edouard Oger <eoger@fastmail.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[dependencies]
base64 = "0.21"
hex = "0.4"
lazy_static = "1.4"
log = "0.4"
parking_lot = ">=0.11,<=0.12"
rate-limiter = { path = "../support/rate-limiter" }
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
sync15 = { path = "../sync15", default-features=false, features=["crypto"] }
url = "2.2"
viaduct = { path = "../viaduct" }
jwcrypto = { path = "../support/jwcrypto" }
rc_crypto = { path = "../support/rc_crypto", features = ["ece", "hawk"] }
error-support = { path = "../support/error", features = ["tracing-logging"] }
thiserror = "2"
anyhow = "1.0"
sync-guid = { path = "../support/guid", features = ["random"] }
uniffi = { version = "0.29.0" }
payload-support = { path = "../support/payload" }
nss = { path = "../support/rc_crypto/nss" }

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }

[dev-dependencies]
viaduct-dev = { path = "../support/viaduct-dev"}
mockall = "0.12"
mockito = { version = "0.31", default-features = false}

[features]
default = []
gecko = [ "rc_crypto/gecko" ]
