[package]
name = "init_rust_components"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Schmidt <joschmidt@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android"]

[features]
default = []
keydb = ["nss-as/keydb"]
ohttp = ["dep:viaduct", "viaduct/ohttp"]

[dependencies]
uniffi = { git = "https://github.com/mozilla/uniffi-rs", rev = "874202a89f5d4437eb974ef4766564162caf01f8" }
nss-as = { path = "../support/rc_crypto/nss" }
viaduct = { path = "../viaduct", optional = true }
