[package]
name = "logins"
edition = "2021"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[features]
default = []

[dependencies]
sync15 = { path = "../sync15" }
serde = "1"
serde_derive = "1"
serde_json = "1"
parking_lot = ">=0.11,<=0.12"
log = "0.4"
lazy_static = "1.4"
url = "2.2"
sql-support = { path = "../support/sql" }
jwcrypto = { path = "../support/jwcrypto" }
interrupt-support = { path = "../support/interrupt" }
error-support = { path = "../support/error", features = ["reporting"] }
sync-guid = { path = "../support/guid", features = ["rusqlite_support", "random"] }
thiserror = "1.0"
anyhow = "1.0"
uniffi = "^0.18"
uniffi_macros = "^0.18"

[dependencies.rusqlite]
version = "0.27.0"
features = ["sqlcipher", "limits", "unlock_notify"]

[build-dependencies]
uniffi_build = { version = "^0.18", features=["builtin-bindgen"] }

[dev-dependencies]
more-asserts = "0.2"
tempfile = "3.2.0"
env_logger = { version = "0.7", default-features = false }
