[package]
name = "logins"
edition = "2021"
version = "0.1.0"
authors = ["Thom Chiovoloni <tchiovoloni@mozilla.com>"]
license = "MPL-2.0"
exclude = ["/android", "/ios"]

[features]
default = []

[dependencies]
# TODO: we've enabled the "standalone-sync" feature - see the description
# of this feature in sync15's Cargo.toml for what we should do instead.
sync15 = { path = "../sync15", features=["standalone-sync"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
parking_lot = ">=0.11,<=0.12"
log = "0.4"
lazy_static = "1.4"
url = "2.2"
sql-support = { path = "../support/sql" }
jwcrypto = { path = "../support/jwcrypto" }
interrupt-support = { path = "../support/interrupt" }
error-support = { path = "../support/error" }
rusqlite = { version = "0.33.0", features = ["limits", "unlock_notify"] }
sync-guid = { path = "../support/guid", features = ["rusqlite_support", "random"] }
thiserror = "1.0"
anyhow = "1.0"
uniffi = { version = "0.28.2" }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }

[dev-dependencies]
more-asserts = "0.2"
tempfile = "3.2.0"
env_logger = { version = "0.10", default-features = false }

# Temp hack for uniffi 0.28 generated code, will not be necessary after next uniffi update.
[lints.clippy]
empty-line-after-doc-comments = "allow"
