[package]
name = "mac"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
parking_lot = "0.12"
serde = "1"
serde_json = "1"
url = "2"
uniffi = { version = "0.29.0" }
uuid = { version = "1.3", features = ["v4"] }
viaduct = { path = "../viaduct" }
error-support = { path = "../support/error" }
thiserror = "1"

[dev-dependencies]
viaduct-reqwest = { path = "../support/viaduct-reqwest" }
mockito = "0.31"
mockall = "0.11"

[build-dependencies]
uniffi = { version = "0.29.0", features = ["build"] }
